# app/__init__.py
@@ -11,9 +11,10 @@ from typing import Any, Dict
 from pathlib import Path
 from bson import ObjectId
 from swagger_ui_bundle import swagger_ui_3_path
-from flask import Response
+from flask import Response, send_from_directory
 import json
 from app.AuthzModule import Authz
+from app.CustomResponseValidator import CustomResponseValidator
 
 class CustomJSONEncoder(FlaskJSONEncoder):
         def default(self, obj):
@@ -28,6 +29,7 @@ def get_bundled_specs(main_file: Path) -> Dict[str, Any]:
     return parser.specification
 
 def create_app(test_config=None):
+
     # create and configure the app
     connexionApp = connexion.FlaskApp(__name__, specification_dir='openapi/', debug=True)
     app = connexionApp.app
@@ -38,8 +40,13 @@ def create_app(test_config=None):
     app.config.from_mapping(
         SECRET_KEY='dev_secret_3fkj$s',
         DATABASE_HOST="mongodb://localhost:27017/",
-        DATABASE="sharity"
+        DATABASE="sharity",
+        HOST="http:localhost:5000"
     )
+
+    # The code above will limit the maximum allowed payload to 16 megabytes.
+    # If a larger file is transmitted, Flask will raise a RequestEntityTooLarge exception.
+    app.config['MAX_CONTENT_LENGTH'] = 16 * 1024 * 1024
 
     if test_config is None:
         # load the instance config, if it exists, when not testing
@@ -59,9 +66,13 @@ def create_app(test_config=None):
         sys.exit("Error: Couldn't reach the database.")
 
     #Authz Module (needs to be before connexion)
-    authzfile = Path("app/authzfile.yml")
+    authzfile = Path("app/authzApiRules.yml")
     authz = Authz()
     authz.initializeAuthz(authzfile)
+
+    validator_map = {
+        'response': CustomResponseValidator
+    }
 
     #swagger
     def return_response(exeception):
@@ -71,10 +82,12 @@ def create_app(test_config=None):
     connexionApp.add_api(get_bundled_specs(Path("app/openapi/sharity-api.yml")),
                 options=options,
                 arguments={'title': 'Sharity Docs'},
-                resolver=CustomViewResolver('app.api'), validate_responses=True )
+                resolver=CustomViewResolver('app.api'), validate_responses=True, validator_map=validator_map )
     connexionApp.add_error_handler(BussinessException, return_response)
 
-
+    @app.route('/static/<path:path>')
+    def staticfile(path):
+        return send_from_directory('static', path)
 
     # Ping route
     @app.route('/ping')
