# app/openapi/schemas.yml
@@ -114,6 +114,9 @@ schemas:
   DocumentFileRequest:
     type: "object"
     additionalProperties: false
+    required: 
+      - filename
+      - delete
     properties:
       filename:
         type: "string"
@@ -121,6 +124,9 @@ schemas:
       file:
         type: "string"
         format: "binary"
+      delete:
+        type: boolean
+        default: false
 
   DocumentFileResponse:
     type: "object"
@@ -356,6 +362,7 @@ schemas:
 
   Error:
     type: "object"
+    additionalProperties: false
     required:
       - status
       - detail
@@ -372,6 +379,7 @@ schemas:
 
   Delete:
     type: "object"
+    additionalProperties: false
     required:
       - id
     properties:
@@ -382,11 +390,28 @@ schemas:
 
   Action:
     type: "object"
+    additionalProperties: false
     required:
       - id
     properties:
       id:
         type: string
+      detail:
+        type: string
+
+  Static: 
+    type: string
+    format: base64
+  
+  StaticDelete:
+    type: "object"
+    additionalProperties: false
+    required:
+      - url
+    properties:
+      url:
+        type: string
+        format: uri
       detail:
         type: string
 
